--- a/scrapper/scrap_github/scrapy.cfg
+++ b/scrapper/scrap_github/scrapy.cfg
@@ -7,5 +7,6 @@
 default = scrap_github.settings
 
 [deploy:local]
-url = http://localhost:6800/    
+url = http://scrapyd:6800/  
+# url = http://localhost:6800/    
 project = scrap_github
