--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,16 @@
 version: '3.3'
 
 services:
+  
    database:
      image: postgres:10.5-alpine
      restart: always
      env_file: dev.env
      ports:
        - 0:5432:5432
+     volumes:
+       - ./db_data/:/var/lib/postgresql/data/
+
    migration:
      image: migrations
      env_file: dev.env
@@ -19,32 +23,36 @@ services:
        - database
      command: alembic upgrade head
     #  command: tail -f /dev/null
-   repo_viewer:
-     image: repo_viewer
+  #  repo_viewer:
+  #    image: repo_viewer
+  #    env_file: dev.env
+  #    build:
+  #       context: ./
+  #       dockerfile: repo_viewer/Dockerfile
+  #    links:
+  #      - migration
+  #    depends_on:
+  #      - database
+  #    ports:
+  #      - 0:5000:5000
+
+   spiders:
+     image: scrap_github
      env_file: dev.env
      build:
-        context: ./
-        dockerfile: repo_viewer/Dockerfile
+       context: .
+       dockerfile: scrapper/Dockerfile
+     environment:
+       - repo_name=pallets/flask
+    #  volumes:
+    #    - ./output:/output/:rw
      links:
-       - migration
+       - database
+      #  - scrapyd
      depends_on:
        - database
-     ports:
-       - 0:5000:5000
-
-  #  spiders:
-  #    image: scrap_github
-  #    build:
-  #      context: scrapper
-  #      dockerfile: Dockerfile
-  #   #  environment:
-  #   #    - repo_name=pallets/flask
-  #   #  volumes:
-  #   #    - ./output:/output/:rw
-  #    links:
-  #      - scrapyd
-  #    depends_on:
-  #      - scrapyd
+       - migration
+      #  - scrapyd
   #  scrapyd:
   #    container_name: scrapyd
   #    image: scrapyd
