--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 __pycache__
 .mypy_cache
-*.json
+#*.json
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
