add datacollection endpoints and frontend

--- a/dev.env
+++ b/dev.env
@@ -4,5 +4,8 @@ POSTGRES_DB=repo_db
 POSTGRES_PASSWORD=password
 POSTGRES_HOST=database
 POSTGRES_PORT=5432
-# operations
-platf=local
+
+#scrapyd server
+SCRAPYD_HOST=scrapyd:6800
+#flask
+APP_SETTINGS=app.config.ProductionConfig
